--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -14,6 +14,13 @@
         "paletteRect": "top: 50px; bottom: 10px; right: 10px; left: auto; width:800px; height: calc(100vh - 60px)"
     },
     {
+        "id": "library",
+        "title": "Library",
+        "environments": ["edit"],
+        "url": "main--hol--edshol.hlx.live/tools/sidekick/library.html",
+        "includePaths": ["**.docx**"]
+    },
+    {
       "id": "generate-variations",
       "title": "GenAI Generate Variations",
       "environments": [
