--- a/tools/sidekick/config.json
+++ b/tools/sidekick/config.json
@@ -3,7 +3,7 @@
     "plugins": [
     {
         "id": "asset-library",
-        "title": "Assets Library",
+        "title": "Asset Library",
         "environments": [
             "edit"
         ],
